# ebook_analyst

./: .gitignore  CLAUDE.md  README.md  README_ENG.md  SKILL.md  pyproject.toml  requirements.txt
ebook_analyst/: __init__.py  character_network.py  collector.py  digest_aggregator.py  epub_reader.py  json_to_md.py  keyword_extractor.py  report_builder.py  text_processor.py  wordcloud_maker.py
scripts/: aggregate_chapter_digests.py  collect_deliverables.py  keyword_extract.py  parse_epub.py  wordcloud_gen.py
